--- a/src/css/Posts.css
+++ b/src/css/Posts.css
@@ -1,3 +1,8 @@
+#posts-list{
+  width: 520px;
+}
+
+
 .posts {
   position: relative;
   list-style-type: none;
@@ -7,9 +12,9 @@
   overflow: hidden;
   border: 1px solid rgba(var(--b6a, 219, 219, 219), 1);
   border-radius: 3px;
-  width: 30%;
+  width: max-content;
   height: max-content;
-  margin: 20px auto;
+  margin: 20px;
   padding: 10px;
 }
 
