--- a/src/css/Posts.css
+++ b/src/css/Posts.css
@@ -1,7 +1,12 @@
 #posts-list{
   width: 520px;
+  margin-right: 350px;
 }
 
+#home-page{
+  display: flex;
+  flex-direction: column;
+}
 
 .posts {
   position: relative;
@@ -25,6 +30,7 @@
 }
 
 .each-comment {
+  width: 420px;
   margin: 30px 0;
   text-align: left;
 }
@@ -65,6 +71,10 @@
 .post-element {
   text-align: left;
   margin: auto;
+}
+
+.post-element.captions{
+  width: 420px;
 }
 
 .comment-btn {
